# VideoFeatureApp

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/videofeatureapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: config.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd_run.c  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/example/videofeatureapp/: AudioBean.java  FFmpegCmd.java  FFmpegHandler.java  FFmpegUtil.java  FfmpegNativeBridge.java  JsonParseTool.java  MainActivity.kt  MediaBean.java  OnHandleListener.java  TestFFmpegActivity.java  ThreadPoolUtil.java  VideoBean.java
app/src/main/res/layout/: activity_main.xml  activity_test.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/videofeatureapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
